<resources>
    <string name="app_name">Confer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_name">Guest</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login">Login</string>
    <string name="latest">Latest</string>
    <string name="popular">Popular</string>
    <string name="about">About</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expand">Expand</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="new_post">New Post</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="title">Your title</string>
    <string name="your_text">Your text</string>
    <string name="not_registered">Not Registered?</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="authorized">Authorized</string>
    <string name="registration_error">Error. Please, try again later</string>
    <string name="registration_success">Success! You can now login</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="bad_username">Please, type another username</string>
    <string name="bad_email">Please, type another email</string>
    <string name="bad_password">Please, type another password</string>
    <string name="passwords_dont_match">Sorry, the passwords don\'t match</string>
    <string name="op">#OP</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="want_to_logout">Are you sure you want to log out?</string>
    <string name="made_by">Made by Pavel Shurmilov</string>
    <string name="already_logged_out">You are already logged out</string>
    <string name="default_error_message">Something went wrong</string>
    <string name="not_authorized">You are not authorized</string>
    <string name="reply">Reply</string>
    <string name="empty_message_warning">Please, type something</string>
</resources>
