<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivLoginImage"
        android:layout_width="@dimen/size_dialog_icon"
        android:layout_height="@dimen/size_dialog_icon"
        android:layout_marginStart="@dimen/margin_dialog_title"
        android:layout_marginTop="@dimen/margin_l"
        android:contentDescription="@string/user"
        android:src="@drawable/ic_user"
        app:layout_constraintEnd_toStartOf="@+id/tvDialogTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="@dimen/size_dialog_icon"
        android:layout_height="@dimen/size_dialog_icon"
        android:layout_marginStart="@dimen/margin_dialog_progress_bar"
        android:layout_marginTop="@dimen/margin_l"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/tvDialogTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDialogTitle"
        style="@style/PostTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xl"
        android:text="@string/login"
        android:textSize="@dimen/text_size_xl"
        app:layout_constraintBottom_toTopOf="@id/tilUsername"
        app:layout_constraintStart_toEndOf="@+id/ivLoginImage"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="@dimen/width_dialog_et"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_s"
        android:layout_marginTop="@dimen/margin_l"
        android:layout_marginEnd="@dimen/margin_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLoginImage">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,LabelFor" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="@dimen/width_dialog_et"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_s"
        android:layout_marginEnd="@dimen/margin_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilUsername">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:ignore="Autofill,LabelFor" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnNotRegistered"
        style="@style/SimpleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_s"
        android:background="@null"
        android:hint="@string/not_registered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/CustomDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnNotRegistered" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/CustomDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@id/btnNotRegistered" />


</android.support.constraint.ConstraintLayout>